--- a/Sman/Sman/Sman.Windows/Sman.Windows.csproj
+++ b/Sman/Sman/Sman.Windows/Sman.Windows.csproj
@@ -121,6 +121,7 @@
     <None Include="Sman.Windows_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\collect_bg.jpg" />
     <Content Include="Assets\Logo.scale-100.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
