--- a/Sman/Sman/Sman.Windows/Sman.Windows.csproj
+++ b/Sman/Sman/Sman.Windows/Sman.Windows.csproj
@@ -126,6 +126,7 @@
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
+    <Content Include="Assets\weather.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="CollectPage.xaml">
